# maelstrom

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.old  Cargo.toml~  LICENSE  README.md  cargo-maelstrom.toml  dev-null.tar  flake.nix  gdb.txt  maelstrom-pytest.toml  maelstrom-test.toml  metest-metadata.toml  meticulous-test.toml  package.nix  proc-and-tmp.tar  pyproject.toml  rustfmt.toml  rusty-tags.vi  shell.nix  test-requirements.txt  test.sh  test1  test2
crates/cargo-maelstrom/: Cargo.toml  README.md
crates/cargo-maelstrom/examples/: cargo-maelstrom.toml  config.toml
crates/cargo-maelstrom/src/: added-default-test-metadata.toml  alternative_mains.rs  artifacts.rs  cargo.rs  cli.rs  config.rs  default-test-metadata.toml  default_test_metadata.toml  lib.rs  main.rs  metadata.rs  progress.rs  test_listing.rs  tests.rs  visitor.rs
crates/cargo-maelstrom/tests/: integration_test.rs
crates/cargo-metest/: Cargo.toml
crates/cargo-metest/examples/: cargo-metest.toml
crates/cargo-metest/src/: artifacts.rs  cargo.rs  config.rs  integration_test.rs  lib.rs  lib.rs.orig  main.rs  metadata.rs  pattern.rs  progress.rs  substitute.rs  test_listing.rs  visitor.rs
crates/cargo-metest/tests/: integration_test.rs
crates/maelstrom-admin/: Cargo.toml  README.md
crates/maelstrom-admin/src/: config.rs  lib.rs  main.rs
crates/maelstrom-base/: Cargo.toml  README.md
crates/maelstrom-base/src/: lib.rs  manifest.rs  manifest_cli.rs  nonempty.rs  proto.rs  ring_buffer.rs  stats.rs  tty.rs
crates/maelstrom-broker/: Cargo.toml  README.md  todo.txt
crates/maelstrom-broker/examples/: config.toml  maelstrom-broker.toml
crates/maelstrom-broker/src/: artifact_fetcher.rs  artifact_pusher.rs  cache.rs  config.rs  connection.rs  github.rs  http.rs  lib.rs  main.rs  scheduler_task.rs
crates/maelstrom-client/: Cargo.toml  build.rs
crates/maelstrom-client-base/: Cargo.toml  README.md  build.rs
crates/maelstrom-client-base/src/: comm.rs  items.proto  lib.rs  proto_buf_conv.rs  spec.rs
crates/maelstrom-client-cli/: Cargo.toml  README.md
crates/maelstrom-client-cli/examples/: maelstrom-client-cli.toml
crates/maelstrom-client-cli/src/: main.rs  spec.rs
crates/maelstrom-client-process/: Cargo.toml  README.md
crates/maelstrom-client-process/src/: artifact_pusher.rs  artifact_upload.rs  client.rs  collapsed_job_spec.rs  comm.rs  digest_repo.rs  dispatcher.rs  driver.rs  lib.rs  lib.rs.orig  lib.rs.rej  local_broker.rs  local_broker_for_standalone.rs  log.rs  main.rs  preparer.rs  progress.rs  router.rs  rpc.rs  stream_wrapper.rs  test.rs  util.rs
crates/maelstrom-client/src/: config.rs  lib.rs  main.rs  spec.rs  test.rs
crates/maelstrom-client/tests/: integration_test.rs  integration_test.rs^
crates/maelstrom-config/: Cargo.toml  README.md
crates/maelstrom-config/src/: lib.rs
crates/maelstrom-container/: Cargo.toml  README.md
crates/maelstrom-container/src/: busybox.tar  image_name.rs  lib.rs  local_registry.rs  local_registry_cert.pem  local_registry_key.pem  main.rs
crates/maelstrom-fuse/: Cargo.toml  README.md
crates/maelstrom-fuse/examples/: hello.rs
crates/maelstrom-fuse/src/: fuse.rs  layer_fs.rs  layer_fs_cli.rs  lib.rs
crates/maelstrom-github/: Cargo.toml  README.md
crates/maelstrom-github/src/: client.rs  lib.rs  queue.rs  test_token.b64
crates/maelstrom-layer-fs/: Cargo.toml  README.md
crates/maelstrom-layer-fs/src/: avl.rs  builder.rs  dir.rs  file.rs  layer_fs_cli.rs  lib.rs  ty.rs
crates/maelstrom-linux/: Cargo.toml  README.md
crates/maelstrom-linux/src/: lib.rs
crates/maelstrom-macro/: Cargo.toml  README.md
crates/maelstrom-macro/src/: config.rs  into_proto_buf.rs  into_result.rs  lib.rs  pocket_definition.rs  proto_buf_ext.rs  remote_derive.rs  try_from_proto_buf.rs
crates/maelstrom-macro/tests/: pocket_definition_test.rs  remote_derive_test.rs
crates/maelstrom-plot/: Cargo.toml  README.md
crates/maelstrom-plot/src/: axis.rs  legend.rs  lib.rs
crates/maelstrom-pytest/: Cargo.toml  README.md
crates/maelstrom-pytest/src/: bg_proc_main.rs  cli.rs  config.rs  default-test-metadata.toml  lib.rs  main.rs  pytest.rs
crates/maelstrom-pytest/tests/: integration_test.rs
crates/maelstrom-run/: Cargo.toml  README.md
crates/maelstrom-run/examples/: config.toml  specs.json
crates/maelstrom-run/src/: escape.rs  job_spec_or_containers.rs  lib.rs  main.rs  spec.rs
crates/maelstrom-simex/: Cargo.toml  README.md
crates/maelstrom-simex/src/: lib.rs
crates/maelstrom-test/: Cargo.toml  README.md
crates/maelstrom-test-runner/: Cargo.toml  README.md
crates/maelstrom-test-runner/src/: alternative_mains.rs  app.rs  app2.rs  artifacts.rs  config.rs  default-test-metadata.toml  deps.rs  fake_test_framework.rs  init.rs  lib.rs  log.rs  metadata.rs  progress.rs  test_db.rs  test_listing.rs  tests.rs  ui.rs  util.rs  visitor.rs
crates/maelstrom-test/src/: client_driver.rs  fake_broker.rs  lib.rs
crates/maelstrom-util/: Cargo.toml  README.md
crates/maelstrom-util/src/: async.rs  async_fs.rs  broker_connection.rs  cache.rs  clap.rs  config.rs  duration.rs  elf.rs  executor.rs  ext.rs  fs.rs  heap.rs  io.rs  lib.rs  log.rs  manifest.rs  manifest_cli.rs  net.rs  process.rs  root.rs  signal.rs  signals.rs  sync.rs  template.rs  thread.rs  time.rs  tty.rs
crates/maelstrom-web/: Cargo.toml  README.md  build.rs  build.sh
crates/maelstrom-web/src/: lib.rs
crates/maelstrom-web/www/: index.html  main.js
crates/maelstrom-worker/: Cargo.toml  README.md
crates/maelstrom-worker-child/: Cargo.toml  README.md
crates/maelstrom-worker-child/src/: lib.rs
crates/maelstrom-worker/examples/: config.toml  maelstrom-worker.toml
crates/maelstrom-worker/src/: artifact_fetcher.rs  cache.rs  config.rs  connection.rs  deps.rs  dispatcher.rs  dispatcher_adapter.rs  executor.rs  executor.rs.orig  fetcher.rs  layer_fs.rs  lib.rs  local_worker.rs  main.rs  (+5 more)
crates/meticulous-base/: Cargo.toml  build.rs
crates/meticulous-broker/: Cargo.toml  build.rs
web/: Cargo.toml  build.sh
web/src/: lib.rs
web/www/: .gitignore  index.html  main.js
(+560 files in other folders)
