[workspace]
resolver = "2"
members = [ "crates/*" ]

# Reduce debug-symbol information for dependencies by default. This saves a significant amount of
# disk space on the dev profile while still retaining the ability to backtrace.
# Comment these lines out are rebuild if you need to park a debugger in the code of a dependency.
[profile.dev.package."*"]
debug = "line-tables-only"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.package]
documentation = "https://maelstrom-software.com/doc/book/latest/"
edition = "2021"
homepage = "https://maelstrom-software.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maelstrom-software/maelstrom"
rust-version = "1.79.0"
version = "0.12.0-dev"

[workspace.dependencies]
anstyle = "1.0.6"
anyhow = "1.0.71"
anyhow_trace = "0.1.3"
ascii = "1.1.0"
assert_matches = "1.5.0"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-trait = "0.1"
async-walkdir = "1"
atomicbox = "0.4"
bincode = "1.3.3"
bracoxide = "0.1.3"
bumpalo = { version = "3.14.0", features = ["collections"] }
byteorder = "1.5.0"
bytes = "1.6.0"
bytesize = "1.3.0"
bytesize-serde = "0.2.1"
camino = { version = "1.1.6", features = ["serde1"] }
cargo_metadata = "0.18"
chrono = "0.4"
clap = { version = "4.2.7", features = ["cargo", "derive", "string", "wrap_help"] }
colored = "2.0.4"
colored-diff = "0.2.3"
combine = "4"
concat-idents = "1.1.5"
console = "0.15"
console_error_panic_hook = "0.1.7"
crossterm = { version = "0.27.0", default-features = false }
darling = "0.20"
derive_more = "0.99"
eframe = "0.26"
egui = "0.26"
egui-toast = "0.12"
egui_gauge = "0.1.3"
elf = "0.7"
enum-map = { version = "2.7.0", features = ["serde"] }
enumset = { version = "1.1.3", features = ["serde"] }
fs2 = "0.4"
futures = "0.3"
futures-lite = "2.1"
gethostname = "0.4.2"
globset = "0.4"
gloo-net = "0.4"
gloo-utils = "0.2"
heck = "0.5.0"
hex = "0.4.3"
hyper = { version = "0.14", features = ["http1", "server", "tcp", "stream"] }
hyper-tungstenite = "0.11"
indicatif = { version = "0.17", features = ["in_memory", "tokio"] }
indoc = "2.0.4"
itertools = "0.10.5"
lddtree = "0.3"
libc = "0.2"
lru = "0.12"
maelstrom-base = { version = "0.12.0-dev", path = "crates/maelstrom-base" }
maelstrom-broker = { version = "0.12.0-dev", path = "crates/maelstrom-broker" }
maelstrom-client = { version = "0.12.0-dev", path = "crates/maelstrom-client" }
maelstrom-client-base = { version = "0.12.0-dev", path = "crates/maelstrom-client-base" }
maelstrom-client-process = { version = "0.12.0-dev", path = "crates/maelstrom-client-process" }
maelstrom-container = { version = "0.12.0-dev", path = "crates/maelstrom-container" }
maelstrom-fuse = { version = "0.12.0-dev", path = "crates/maelstrom-fuse" }
maelstrom-layer-fs = { version = "0.12.0-dev", path = "crates/maelstrom-layer-fs" }
maelstrom-linux = { version = "0.12.0-dev", path = "crates/maelstrom-linux" }
maelstrom-macro = { version = "0.12.0-dev", path = "crates/maelstrom-macro" }
maelstrom-plot = { version = "0.12.0-dev", path = "crates/maelstrom-plot" }
maelstrom-simex = { version = "0.12.0-dev", path = "crates/maelstrom-simex" }
maelstrom-test = { version = "0.12.0-dev", path = "crates/maelstrom-test" }
maelstrom-test-runner = { version = "0.12.0-dev", path = "crates/maelstrom-test-runner" }
maelstrom-util = { version = "0.12.0-dev", path = "crates/maelstrom-util" }
maelstrom-web = { version = "0.12.0-dev", path = "crates/maelstrom-web" }
maelstrom-worker = { version = "0.12.0-dev", path = "crates/maelstrom-worker" }
maelstrom-worker-child = { version = "0.12.0-dev", path = "crates/maelstrom-worker-child" }
maplit = "1"
memchr = "2"
native-tls = "0.2"
netlink-packet-core = "0.7"
netlink-packet-route = "0.17"
nonempty = { version = "0.8.1", features = ["serialize"] }
num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2"
num_cpus = "1.15.0"
num_enum = "0.7"
oci-spec = "0.6"
page_size = "0.6.0"
pathdiff = "0.2.1"
pin-project = "1"
pretty_assertions = "1.4.0"
proc-macro2 = "1"
prost = "0.12"
protoc-bin-vendored = "3.0.0"
quote = "1"
ratatui = { version = "0.27", features = ["unstable-rendered-line-info"] }
rand = "0.8.5"
regex = "1.8.3"
regex-macro = "0.2"
reqwest = { version = "0.11", features = [ "blocking", "json", "stream" ] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.107" }
serde_repr = "0.1"
serde_test = "1"
serde_with = { version = "3.4", features = ["chrono"] }
sha2 = "0.10.6"
slog = { version = "2.7.0", features = ["dynamic-keys", "max_level_debug", "release_max_level_debug"] }
slog-async = "2.8.0"
slog-json = "2.6"
slog-term = "2.9.0"
smallvec = "1.6.1"
strum = { version = "0.25.0", features = ["derive"] }
syn = { version = "2", features = ["full"] }
tar = "0.4.38"
tempfile = "3.5.0"
tokio = { version = "1.28", features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util" ] }
tokio-native-tls = "0.3"
tokio-tar = "0.3"
tokio-util = { version = "0.7.10", features = [ "compat" ] }
toml = "0.8.8"
tonic = "0.11"
tonic-build = "0.11"
tower = "0.4"
tuple = "0.5.1"
tui-term = "0.1"
throbber-widgets-tui = "0.6"
unicode-truncate = "0.2.0"
unicode-width = "0.1.7"
versions = "6.2.0"
vt100 =  "0.15"
walkdir = "2.4"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
xdg = "2.5.2"
zerocopy = { version = "0.7", features = ["derive"] }
