[workspace]
resolver = "2"
members = [ "crates/*" ]

# Reduce debug-symbol information for dependencies by default. This saves a significant amount of
# disk space on the dev profile while still retaining the ability to backtrace.
# Comment these lines out are rebuild if you need to park a debugger in the code of a dependency.
[profile.dev.package."*"]
debug = "line-tables-only"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.wasm_dev]
inherits = "dev"

[profile.wasm_release]
inherits = "release"

[workspace.package]
documentation = "https://maelstrom-software.com/doc/book/latest/"
edition = "2021"
homepage = "https://maelstrom-software.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maelstrom-software/maelstrom"
rust-version = "1.85.1"
version = "0.15.0-dev"

[workspace.dependencies]
anstyle = "1.0.10"
anyhow = "1.0.97"
anyhow_trace = "0.1.3"
ascii = "1.1.0"
assert_matches = "1.5.0"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-trait = "0.1"
async-walkdir = "2"
atomicbox = "0.4"
azure_core = { version = "0.21", features = ["tokio-fs"] }
azure_storage_blobs = "0.21"
base64 = "0.22"
bincode = "1.3.3"
bracoxide = "0.1.5"
bumpalo = { version = "3.17.0", features = ["collections"] }
byteorder = "1.5.0"
bytes = "1.10.1"
bytesize = "1.3.2"
bytesize-serde = "0.2.1"
camino = { version = "1.1.9", features = ["serde1"] }
cargo_metadata = "0.19"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive", "string", "wrap_help"] }
colored = "3"
colored-diff = "0.2.3"
combine = "4"
concat-idents = "1.1.5"
console = "0.15"
console_error_panic_hook = "0.1.7"
countio = { version = "0.2", features = ["tokio"] }
crossterm = { version = "0.28.1", default-features = false }
darling = "0.20"
derivative = "2.2.0"
derive_more = { version = "2", features = ["add", "add_assign", "constructor", "debug", "deref", "deref_mut", "display", "error", "from", "into", "into_iterator"] }
eframe = "0.26"
egui = "0.26"
egui-toast = "0.12"
egui_gauge = "=0.1.4"
elf = "0.7"
enum-map = { version = "2.7.3", features = ["serde"] }
enumset = { version = "1.1.5", features = ["serde"] }
fs2 = "0.4"
futures = "0.3"
futures-lite = "2.6"
get-size = { version = "0.1.4", features = ["derive"] }
google-sheets4 = "3.1.0"
globset = "0.4"
gloo-net = "0.6"
gloo-utils = "0.2"
heck = "0.5.0"
hex = "0.4.3"
http = "1"
http-body = "1"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["http1", "server"] }
hyper-tungstenite = "0.17"
hyper-util= "0.1"
indexmap = "2"
indicatif = { version = "0.17", features = ["in_memory", "tokio"] }
indoc = "2.0.6"
itertools = "0.14"
lddtree = "0.3"
libc = "0.2"
lru = "0.13"
maelstrom-admin = { version = "0.15.0-dev", path = "crates/maelstrom-admin" }
maelstrom-base = { version = "0.15.0-dev", path = "crates/maelstrom-base" }
maelstrom-broker = { version = "0.15.0-dev", path = "crates/maelstrom-broker" }
maelstrom-client = { version = "0.15.0-dev", path = "crates/maelstrom-client" }
maelstrom-client-base = { version = "0.15.0-dev", path = "crates/maelstrom-client-base" }
maelstrom-client-process = { version = "0.15.0-dev", path = "crates/maelstrom-client-process" }
maelstrom-container = { version = "0.15.0-dev", path = "crates/maelstrom-container" }
maelstrom-fuse = { version = "0.15.0-dev", path = "crates/maelstrom-fuse" }
maelstrom-layer-fs = { version = "0.15.0-dev", path = "crates/maelstrom-layer-fs" }
maelstrom-linux = { version = "0.15.0-dev", path = "crates/maelstrom-linux" }
maelstrom-macro = { version = "0.15.0-dev", path = "crates/maelstrom-macro" }
maelstrom-plot = { version = "0.15.0-dev", path = "crates/maelstrom-plot" }
maelstrom-simex = { version = "0.15.0-dev", path = "crates/maelstrom-simex" }
maelstrom-test = { version = "0.15.0-dev", path = "crates/maelstrom-test" }
maelstrom-test-runner = { version = "0.15.0-dev", path = "crates/maelstrom-test-runner" }
maelstrom-util = { version = "0.15.0-dev", path = "crates/maelstrom-util" }
maelstrom-web = { version = "0.15.0-dev", path = "crates/maelstrom-web" }
maelstrom-worker = { version = "0.15.0-dev", path = "crates/maelstrom-worker" }
maelstrom-worker-child = { version = "0.15.0-dev", path = "crates/maelstrom-worker-child" }
maelstrom-github = { version = "0.15.0-dev", path = "crates/maelstrom-github" }
maplit = "1"
memchr = "2"
native-tls = "0.2"
netlink-packet-core = "0.7"
netlink-packet-route = "0.17"
notify = "8"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2"
num_cpus = "1.16.0"
num_enum = "0.7"
oci-spec = "0.7"
paste = "1"
page_size = "0.6.0"
pathdiff = "0.2.3"
pin-project = "1"
pretty_assertions = "1.4.1"
proc-macro2 = "1"
prost = "0.13"
protoc-bin-vendored = "3.1.0"
quote = "1"
ratatui = { version = "0.29", features = ["scrolling-regions", "unstable-rendered-line-info"] }
rand = "0.9"
ref-cast = "1.0"
regex = "1.11.1"
regex-macro = "0.3"
reqwest = { version = "0.12", features = [ "blocking", "json", "stream" ] }
rstest = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_repr = "0.1"
serde_test = "1"
serde_with = { version = "3.12", features = ["chrono"] }
serde_sheets = "0.1.2"
sha2 = "0.10.8"
slog = { version = "2.7.0", features = ["dynamic-keys", "max_level_debug", "release_max_level_debug"] }
slog-async = "2.8.0"
slog-json = "2.6"
slog-term = "2.9.1"
std-semaphore = "0.1"
smallvec = "1.14.0"
strum = { version = "0.27", features = ["derive"] }
syn = { version = "2", features = ["full"] }
tar = "0.4"
tempfile = "3.19.0"
tokio = { version = "1.44", features = [ "fs", "io-std", "io-util", "macros", "net", "process", "rt","rt-multi-thread", "signal", "sync", "time" ] }
tokio-native-tls = "0.3"
tokio-tar = "0.3"
tokio-util = { version = "0.7.14", features = [ "compat" ] }
toml = "0.8.20"
tonic = "0.12"
tonic-build = "0.12"
tower = { version = "0.5", features = ["util"] }
tuple = "0.5.2"
tui-term = "0.2.0"
url = "2"
unicode-truncate = "2"
unicode-width = "0.2.0"
versions = "7"
uuid = "1.16.0"
vt100 =  "0.15"
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-cli-support = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [ "Document", "Location", "WebSocket", "Window" ] }
xdg = "2.5.2"
zerocopy = { version = "0.8", features = ["derive"] }
