[package]
name = "meticulous_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "*"
eframe = "^0.22"
egui = "^0.22"
wasm-bindgen = "^0.2"
wasm-logger = "^0.2"
wasm-bindgen-futures = "^0.4"
