[package]
name = "meticulous_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
console_error_panic_hook = "*"
eframe = "^0.22"
egui = "^0.22"
futures = "^0.3"
gloo-net = "^0.4"
gloo-utils = "^0.2"
meticulous-ui = { version = "^0.1", path = "../crates/meticulous-ui" }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
wasm-logger = "^0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Location",
  "WebSocket",
  "Window",
]
