[package]
name = "cargo-metest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
colored.workspace = true
combine.workspace = true
console.workspace = true
enumset.workspace = true
figment.workspace = true
indicatif.workspace = true
lddtree.workspace = true
meticulous-base.workspace = true
meticulous-client.workspace = true
meticulous-util.workspace = true
regex.workspace = true
serde_repr.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tar.workspace = true
toml.workspace = true
unicode-truncate.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_matches.workspace = true
bincode.workspace = true
enum-map.workspace = true
serde.workspace = true
tempfile.workspace = true
meticulous-broker.workspace = true
meticulous-test.workspace = true
meticulous-worker.workspace = true
