[package]
name = "cargo-metest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
colored.workspace = true
combine.workspace = true
console.workspace = true
derive_more.workspace = true
enumset.workspace = true
figment.workspace = true
globset.workspace = true
indicatif.workspace = true
lddtree.workspace = true
maelstrom-base.workspace = true
maelstrom-client.workspace = true
maelstrom-util.workspace = true
regex.workspace = true
regex-macro.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
tar.workspace = true
toml.workspace = true
unicode-truncate.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_matches.workspace = true
bincode.workspace = true
enum-map.workspace = true
serde.workspace = true
tempfile.workspace = true
maelstrom-broker.workspace = true
maelstrom-test.workspace = true
maelstrom-worker.workspace = true
