[package]
name = "maelstrom-base"
description = "Data structures and code used by all Maelstrom code, including WASM"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
camino.workspace = true
derive_more.workspace = true
enum-map.workspace = true
enumset.workspace = true
hex.workspace = true
nonempty.workspace = true
serde.workspace = true
serde_repr.workspace = true
strum.workspace = true

[dev-dependencies]
serde_test.workspace = true
