[package]
name = "maelstrom-broker"
categories = ["development-tools::testing", "virtualization"]
description = "The maelstrom broker. This process coordinates between clients and workers."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytesize.workspace = true
clap.workspace = true
derive_more.workspace = true
futures.workspace = true
hyper-tungstenite.workspace = true
hyper.workspace = true
maelstrom-base.workspace = true
maelstrom-github.workspace = true
maelstrom-macro.workspace = true
maelstrom-util.workspace = true
maelstrom-web.workspace = true
ref-cast.workspace = true
serde.workspace = true
slog.workspace = true
strum.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
url.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
colored-diff.workspace = true
enum-map.workspace = true
itertools.workspace = true
maplit.workspace = true
maelstrom-test.workspace = true
strum.workspace = true
