[package]
name = "maelstrom-broker"
categories = ["development-tools::testing", "virtualization"]
description = "The maelstrom broker. This process coordinates between clients and workers."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
web-ui = ["dep:http-body-util", "dep:hyper", "dep:hyper-tungstenite", "dep:hyper-util", "maelstrom-web/web-ui"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
bytesize.workspace = true
clap.workspace = true
derive_more.workspace = true
derivative.workspace = true
enum-map.workspace = true
futures.workspace = true
get-size.workspace = true
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
hyper-tungstenite = { workspace = true, optional = true }
maelstrom-base.workspace = true
maelstrom-github.workspace = true
maelstrom-macro.workspace = true
maelstrom-util.workspace = true
maelstrom-web = { workspace = true, optional = true }
ref-cast.workspace = true
serde.workspace = true
slog.workspace = true
strum.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
url.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
colored-diff.workspace = true
itertools.workspace = true
maplit.workspace = true
maelstrom-test.workspace = true
rstest.workspace = true
strum.workspace = true
