[package]
name = "maelstrom-client-base"
categories = ["development-tools::testing", "virtualization"]
description = "Client library code shared between API and process for Maelstrom."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
enum-map.workspace = true
enumset.workspace = true
maelstrom-base.workspace = true
maelstrom-container.workspace = true
maelstrom-macro.workspace = true
maelstrom-util.workspace = true
prost.workspace = true
serde.workspace = true
serde_with.workspace = true
tonic.workspace = true
tuple.workspace = true

[dev-dependencies]
maplit.workspace = true
maelstrom-test.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true
versions.workspace = true
