[package]
name = "maelstrom-client-cli"
categories = ["command-line-utilities", "development-tools::testing", "virtualization"]
description = "CLI for submitting jobs to Maelstrom clusters."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
enumset.workspace = true
figment.workspace = true
indicatif.workspace = true
maelstrom-base.workspace = true
maelstrom-client.workspace = true
maelstrom-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
maelstrom-test.workspace = true
