[package]
name = "maelstrom-client-process"
categories = ["development-tools::testing", "virtualization"]
description = "Client library background process for Maelstrom."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bracoxide.workspace = true
chrono.workspace = true
futures.workspace = true
globset.workspace = true
itertools.workspace = true
maelstrom-base.workspace = true
maelstrom-client-base.workspace = true
maelstrom-container.workspace = true
maelstrom-util.workspace = true
maelstrom-worker.workspace = true
pin-project.workspace = true
slog.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true

[dev-dependencies]
assert_matches.workspace = true
colored-diff.workspace = true
enum-map.workspace = true
maelstrom-test.workspace = true
maplit.workspace = true
tempfile.workspace = true
