[package]
name = "maelstrom-client"
categories = ["development-tools::testing", "virtualization"]
description = "Client library for Maelstrom."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
maelstrom-base.workspace = true
maelstrom-client-process.workspace = true
maelstrom-container.workspace = true
maelstrom-util.workspace = true

[dev-dependencies]
maelstrom-test.workspace = true
maplit.workspace = true
nonempty.workspace = true
sha2.workspace = true
tempfile.workspace = true
