[package]
name = "maelstrom-client"
categories = ["development-tools::testing", "virtualization"]
description = "Client library for Maelstrom."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
assert_matches.workspace = true
indicatif.workspace = true
maelstrom-base.workspace = true
maelstrom-client-base.workspace = true
maelstrom-client-process.workspace = true
maelstrom-container.workspace = true
maelstrom-linux.workspace = true
maelstrom-util.workspace = true
num_enum.workspace = true
serde.workspace = true
slog.workspace = true
tempfile.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true

[dev-dependencies]
slog-async.workspace = true
slog-term.workspace = true
maelstrom-test.workspace = true
maplit.workspace = true
nonempty.workspace = true
sha2.workspace = true
tempfile.workspace = true
