[package]
name = "maelstrom-client"
categories = ["development-tools::testing", "virtualization"]
description = "Client library for Maelstrom."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
http.workspace = true
hyper-util.workspace = true
indicatif.workspace = true
maelstrom-base.workspace = true
maelstrom-client-base.workspace = true
maelstrom-client-process.workspace = true
maelstrom-container.workspace = true
maelstrom-linux.workspace = true
maelstrom-util.workspace = true
serde.workspace = true
slog.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
url.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
regex.workspace = true
serde_json.workspace = true
slog-async.workspace = true
slog-term.workspace = true
tar.workspace = true
maelstrom-test.workspace = true
maplit.workspace = true
nonempty.workspace = true
sha2.workspace = true
tempfile.workspace = true
