[package]
name = "maelstrom-config"
description = "Library for parsing command-line options, environment variables, and config-file settings."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
indoc.workspace = true
