[package]
name = "maelstrom-container"
description = "Library of container utilities for Maelstrom"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-compression.workspace = true
clap.workspace = true
directories.workspace = true
futures.workspace = true
indicatif.workspace = true
maelstrom-util.workspace = true
oci-spec.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
tempfile.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
maplit.workspace = true
